remove bloat from index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li class="current"><a href="index.html" target="_blank"="./index.html">Home</a></li>
+<li class="current"><a href="index.html" target="_blank">Home</a></li>
 <li><a href="about.html" target="_blank"="./about.html">About</a></li>
 <li><a href="contact.html" target="_blank"="./contact.html">Contact</a></li>
 </ul></nav></div>
