--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
 <!--Video Overlay-->
     <div class="overlay"></div>
 </section>
-   
+
 <!--NEWSLETTER-->
 <h2>Send an Email</h2>
 <section class="sendmail">
         <form>
-        <input type="email" placeholder="Enter Email...">
+        <input type="email" placeholder="Enter Email..." required>
         <button type="submit" class="button" onclick="audio.play();">Send</button>
         <script type="text/javascript">
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
