--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <!--SITE LOGO-->
     <title>NeuroGen</title>
 
-    <!--SITE ICON-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#001df1">
 
 </head>
 <body>
@@ -29,9 +23,9 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li class="current"><a href="index.html" target="_blank">Home</a></li>
-<li><a href="about.html" target="_blank"="./about.html">About</a></li>
-<li><a href="contact.html" target="_blank"="./contact.html">Contact</a></li>
+<li class="current"><a href="index.html" target="_blank" >Home</a></li>
+<li><a href="about.html" target="_blank" >About</a></li>
+<li><a href="contact.html" target="_blank" >Contact</a></li>
 </ul></nav></div>
 
 </header>
