--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <form>
         <input type="email" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
-        <script type="text/javascript">
+        <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
     </form>
