--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <!--NEWSLETTER-->
 <h3>Subscribe To Our Newsletter</h3>
-<section class="newsletter">
+<div class="newsletter">
         <form>
         <input type="email" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
@@ -56,7 +56,7 @@
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
     </form>
-</section>
+</div>
         
     
 
