--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li><a href="index.html" target="_blank"="./index.html">Home</a></li>
-<li class="current"><a href="about.html" target="_blank"="./about.html">About</a></li>
-<li><a href="contact.html" target="_blank"="./contact.html">Contact</a></li>
+<li><a href="index.html" target="_blank">Home</a></li>
+<li class="current"><a href="about.html" target="_blank">About</a></li>
+<li><a href="contact.html" target="_blank">Contact</a></li>
 </ul></nav></div>
 
 </header>
