--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li><a href="index.html" target="_blank"="./index.html">Home</a></li>
-<li><a href="about.html" target="_blank"="./about.html">About</a></li>
-<li class="current"><a href="contact.html" target="_blank"="./contact.html">Contact</a></li>
+<li><a href="index.html" target="_blank">Home</a></li>
+<li><a href="about.html" target="_blank">About</a></li>
+<li class="current"><a href="contact.html" target="_blank">Contact</a></li>
 </ul></nav></div>
 
 </header>
@@ -35,7 +35,7 @@
 
 <!--NEWSLETTER-->
 <h2>Send an Email</h2>
-<section class="sendmail">
+<div class="sendmail">
         <form>
         <input type="email" placeholder="Enter Email..." required>
         <button type="submit" class="button" onclick="audio.play();">Send</button>
@@ -43,7 +43,7 @@
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
     </form>
-</section>
+</div>
 
 
 
