--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <!--SECTION 1: SHOWCASE-->
 <section class="showcase">
 <div id="bg-img">
-    <img src="./img/bg_img.jpg">
+    <img src="./img/bg_img.jpg" alt="Screen Readers">
 </div>
 
 <!--Text-->
