remove trailing slashes from img class

--- a/about.html
+++ b/about.html
@@ -28,12 +28,11 @@
 <!--SECTION 1: SHOWCASE-->
 <section class="showcase">
 <div id="bg-img">
-    <img src="./img/bg_img.jpg" alt="Screen Readers">
+    <img src="./img/bg_img.jpg" alt="Background Image for About Page">
 </div>
-
-<!--Text-->
-
 </section>
+
+<!--MAIN TEXT-->
 <div class="text">
     <h2>What are Nootropics?</h2>
     <p>Nootropics (/noʊ.əˈtroʊpɪks/ noh-ə-TROHP-iks, or /noʊ.əˈtrɒpɪks/ noh-ə-TROP-iks) 
@@ -48,19 +47,19 @@
 
     <!--BOX 1 -->
     <div class="box">
-    <img class="img-resize" src="./img/img-1.jpg" alt="Image of Nootropics"/>
+    <img class="img-resize" src="./img/img-1.jpg" alt="Image of Nootropics">
     <h3>Nootropics</h3>
     </div>
 
     <!--BOX 2 -->
     <div class="box">
-    <img class="img-resize" src="./img/box_img_2.jpg" alt="Image of a Rubiks Cube"/>
+    <img class="img-resize" src="./img/box_img_2.jpg" alt="Image of a Rubiks Cube">
     <h3>Memory Tools</h3>
     </div>
 
     <!--BOX 3 -->
     <div class="box">
-    <img class="img-resize" src="./img/box_img_3.jpg" alt="Image of Books"/>
+    <img class="img-resize" src="./img/box_img_3.jpg" alt="Image of Books">
     <h3>Books</h3>
     </div>
     
