remove js script bloat again

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <form>
         <input type="email" placeholder="Enter Email..." required>
         <button type="submit" class="button" onclick="audio.play();">Send</button>
-        <script type="text/javascript">
+        <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
     </form>
