--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li><a href="index.html" target="_blank">Home</a></li>
-<li><a href="about.html" target="_blank">About</a></li>
-<li class="current"><a href="contact.html" target="_blank">Contact</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li class="current"><a href="contact.html">Contact</a></li>
 </ul></nav></div>
 
 </header>
