--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <!-- NAVBAR--> 
 </div><nav><ul>
-<li class="current"><a href="index.html" target="_blank" >Home</a></li>
-<li><a href="about.html" target="_blank" >About</a></li>
-<li><a href="contact.html" target="_blank" >Contact</a></li>
+<li class="current"><a href="index.html" >Home</a></li>
+<li><a href="about.html" >About</a></li>
+<li><a href="contact.html" >Contact</a></li>
 </ul></nav></div>
 
 </header>
