--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
         <!--SITE LOGO-->
         <title>NeuroGen</title>
@@ -44,15 +45,55 @@
 <!--NEWSLETTER-->
 <h3>Subscribe To Our Newsletter</h3>
 <div class="newsletter">
-        <form>
-        <input type="email" placeholder="Enter Email...">
+        <form id="formEmail">
+        <input type="email" id="validateEmail" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
         <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
     </form>
 </div>
-        
+
+<!--FOOTER-->
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+
+        <div class="col-sm-4">
+            <ul class="list-inline social-links">
+                <li class="list-inline-item">
+                    <a target="_blank" href="#">
+                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="#">
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="#">
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <span class="sr-only">LinkedIn</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="#">
+                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <span class="sr-only">Pinterest</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="#">
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
     
 
 
