Add Memory App & Improve about-page

--- a/about.html
+++ b/about.html
@@ -34,33 +34,40 @@
 </section>
 
 <!--MAIN TEXT-->
-<div class="text">
-    <h2>What are Nootropics?</h2>
-    <p>Nootropics (/noʊ.əˈtroʊpɪks/ noh-ə-TROHP-iks, or /noʊ.əˈtrɒpɪks/ noh-ə-TROP-iks) 
-        (colloquial: smart drugs and cognitive enhancers, similar to adaptogens) 
-        are a wide range of natural or synthetic supplements or drugs and other substances 
-        that are claimed to improve cognitive function or to promote relaxation,
-        particularly boosting mood, executive functions, attention, memory, creativity, 
-        or motivation in healthy individuals.</p>
+<section class="about-text">
+<div class="text-noo">
+    <h2>Nootropics</h2>
+    <p>Nootropics are substances claimed to improve cognitive function in individuals. </p>
 </div>
+<div class="text-noo">
+    <h2>Memory</h2>
+    <p>Memory is the ability of the brain to encode, store, and retrieve information over time. </p>
+</div>
+<div class="text-noo">
+<h2>Books</h2>
+    <p>Reading is a powerful tool for learning and has been the subject of 
+        scientific investigation for many years.
+        </p>
+</div>
+</section>
+
 <!-- SECTION: BOXES -->
 <section id="boxes">
 
     <!--BOX 1 -->
     <div class="box">
-    <img class="img-resize" src="./img/img-1.jpg" alt="Image of Nootropics">
+    <img class="img-resize-1" src="./img/img-1.jpg" alt="Image of Nootropics">
     <h3>Nootropics</h3>
     </div>
 
     <!--BOX 2 -->
     <div class="box">
-    <img class="img-resize" src="./img/box_img_2.jpg" alt="Image of a Rubiks Cube">
-    <h3>Memory Tools</h3>
+    <a href="https://sirak-k.github.io/my-project-2/"><img class="img-resize-2" src="./img/img-app.png" alt="Image of a Rubiks Cube" target="_blank"></a>
     </div>
 
     <!--BOX 3 -->
     <div class="box">
-    <img class="img-resize" src="./img/box_img_3.jpg" alt="Image of Books">
+    <img class="img-resize-3" src="./img/box_img_3.jpg" alt="Image of Books">
     <h3>Books</h3>
     </div>
 </section>
