Implement missing responsiveness

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
     <div class="container">
     <div id="branding">
     <h1>NeuroGen</h1>
-
+</div>
 <!-- NAVBAR--> 
-</div><nav><ul>
+<nav><ul>
 <li><a href="index.html">Home</a></li>
 <li class="current"><a href="about.html">About</a></li>
 <li><a href="contact.html">Contact</a></li>
@@ -35,18 +35,17 @@
 
 <!--MAIN TEXT-->
 <section class="about-text">
-<div class="text-noo">
+<div class="texts">
     <h2>Nootropics</h2>
     <p>Nootropics are substances claimed to improve cognitive function in individuals. </p>
 </div>
-<div class="text-noo">
-    <h2>Memory</h2>
+<div class="texts">
+    <h2>Quiz App</h2>
     <p>Memory is the ability of the brain to encode, store, and retrieve information over time. </p>
 </div>
-<div class="text-noo">
+<div class="texts">
 <h2>Books</h2>
-    <p>Reading is a powerful tool for learning and has been the subject of 
-        scientific investigation for many years.
+    <p>Reading is a powerful way of learning. You can find books of various genres below.
         </p>
 </div>
 </section>
