--- a/404.html
+++ b/404.html
@@ -14,9 +14,13 @@
 <header>
     <div class="container">
     <div id="branding">
-        <!--404 MESSAGE-->
-    <h1>404 - Page Not Found</h1>
-    <p>Sorry, the page you were looking for could not be found.</p>
+    <h1>NeuroGen</h1>
+     <!--404 MESSAGE-->
+     <h2>404 - Page Not Found</h2>
+     <p>Sorry, the page you were looking for could not be found.</p>
+</div>
+</div>
+       
 
 </header>
 <!-- HEADER: END-->
