Fix 8: Ext. Link to game opens in new tab

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
     <!--BOX 2 -->
     <div class="box">
-    <a href="https://sirak-k.github.io/my-project-2/"><img class="img-resize-2" src="./img/img-app.png" alt="Image of a Rubiks Cube" target="_blank"></a>
+    <a href="https://sirak-k.github.io/my-project-2/" target="_blank"><img class="img-resize-2" src="./img/img-app.png" alt="Image of a Rubiks Cube"></a>
     </div>
 
     <!--BOX 3 -->
