Improve all page design, remove pos:abs

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
     <div class="container">
     <div id="branding">
     <h1>NeuroGen</h1>
-
+</div>
 <!-- NAVBAR--> 
-</div><nav><ul>
+<nav><ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li class="current"><a href="contact.html">Contact</a></li>
@@ -29,14 +29,15 @@
 <!--SECTION: SHOWCASE-->
 <section class="showcase">
 <!--Video-->
-    <video src="img/video-1.mp4" autoplay loop muted></video>
+    <video src="img/video-1.mp4" class="videos" autoplay loop muted></video>
 <!--Video Overlay-->
     <div class="overlay"></div>
 </section>
 
 <!--NEWSLETTER-->
-<h2>Send an Email</h2>
+
 <div class="sendmail">
+    <h2>Send an Email</h2>
         <form id="formEmail">
         <input type="email" id="validateEmail" placeholder="Enter Email..." required>
         <button type="submit" class="button" onclick="audio.play();">Send</button>
