--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container">
     <div id="branding">
     <h1>NeuroGen</h1>
-
+</div>
 <!-- NAVBAR--> 
-</div><nav><ul>
+<nav><ul>
 <li class="current"><a href="index.html" >Home</a></li>
 <li><a href="about.html" >About</a></li>
 <li><a href="contact.html" >Contact</a></li>
@@ -27,24 +27,22 @@
 </header>
 <!-- HEADER: END-->
 
-<!--SECTION: SHOWCASE-->
-<section class="showcase">
-
 <!--SHOWCASE: VIDEO-->
-    <video src="img/video-1.mp4" autoplay loop muted></video>
+    <video src="img/video-1.mp4" class="videos" autoplay loop muted></video>
 <!--Video Overlay-->
     <div class="overlay"></div>
 
 <!--TEXT-->
-<div class="text">
-    <h3>Enhance Your Brain.</h3>
-    <h3>Enhance Your Life.</h3>
+<div class="textz">
+    <h2>Enhance Your Brain.</h2>
+    <h2>Enhance Your Life.</h2>
 </div>
-</section>
+
 
 <!--NEWSLETTER-->
-<h4>Subscribe To Our Newsletter</h4>
+
 <div class="newsletter">
+    <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail">
         <input type="email" id="validateEmail" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
