Name Change: video to landing-video

--- a/404.html
+++ b/404.html
@@ -20,18 +20,16 @@
      <p>Sorry, the page you were looking for could not be found.</p>
 </div>
 </div>
-       
-
 </header>
 <!-- HEADER: END-->
 
 <!--SECTION: SHOWCASE-->
-<section class="showcase">
+
 <!--Video-->
-    <video src="img/video-1.mp4" autoplay loop muted></video>
+    <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
 <!--Video Overlay-->
-    <div class="overlay"></div>
-</section>
+    <div class="landing-overlay"></div>
+
 <!--FOOTER-->
 <footer class="container-fluid">
     <div id="footer-details" class="row">
