--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
 <!--SECTION: SHOWCASE-->
 <section class="showcase">
 <!--Video-->
-    <video src="img/video-1.mp4" class="videos" autoplay loop muted></video>
+    <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
 <!--Video Overlay-->
-    <div class="overlay"></div>
+    <div class="landing-overlay"></div>
 </section>
 
 <!--NEWSLETTER-->
