--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <!-- HEADER: END-->
 
 <!--SHOWCASE: VIDEO-->
-    <video src="img/video-1.mp4" class="videos" autoplay loop muted></video>
+    <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
 <!--Video Overlay-->
-    <div class="overlay"></div>
+    <div class="landing-overlay"></div>
 
 <!--TEXT-->
 <div class="textz">
