Clean Code: Blank Spaces & redundant syntax

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="landing-overlay"></div>
 
 <!--TEXT-->
-<div class="textz">
+<div class="texts">
     <h2>Enhance Your Brain.</h2>
     <h2>Enhance Your Life.</h2>
 </div>
