Fix 11 : Clickable Logo (return to Homepage)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +9,16 @@
         <title>NeuroGen</title>
 </head>
 <body>
-
 <!-- HEADER: START -->
 <header>
     <div class="container">
     <div id="branding">
-    <h1>NeuroGen</h1>
+    <h1><a href="index.html">NeuroGen™</a></h1>
 </div>
 <!-- NAVBAR--> 
 <nav><ul>
 <li class="current"><a href="index.html" >Home</a></li>
-<li><a href="about.html" >About</a></li>
+<li><a href="about.html">About</a></li>
 <li><a href="contact.html" >Contact</a></li>
 </ul></nav></div>
 
@@ -38,9 +36,7 @@
     <h2>Enhance Your Life.</h2>
 </div>
 
-
 <!--NEWSLETTER-->
-
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail">
