--- a/404.html
+++ b/404.html
@@ -12,7 +12,8 @@
 
 <!-- HEADER: START -->
 <header>
-    <h1>NeuroGen</h1>
+    <div id="branding">
+    <h1><a href="index.html">NeuroGen™</a></h1></div>
      <!--404 MESSAGE-->
      <h2>404 - Page Not Found</h2>
      <p>Sorry, the page you were looking for could not be found.</p>
