--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <header>
     <div class="container">
     <div id="branding">
-    <h1>NeuroGen</h1>
+    <h1><a href="index.html">NeuroGen™</a></h1>
 </div>
 <!-- NAVBAR--> 
 <nav><ul>
