Fix 12: File names updated

--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <title>NeuroGen</title>
 </head>
 <body>
-
 <!-- HEADER: START -->
 <header>
     <div class="container">
@@ -22,18 +20,15 @@
 <li class="current"><a href="about.html">About</a></li>
 <li><a href="contact.html">Contact</a></li>
 </ul></nav></div>
-
 </header>
 <!-- HEADER: END-->
 
-<!--SECTION 1: SHOWCASE-->
-<section class="showcase">
+<!-- Background Image -->
 <div id="bg-img">
     <img src="./img/bg_img.jpg" alt="Background Image for About Page">
 </div>
-</section>
 
-<!--MAIN TEXT-->
+<!-- BOXES: TEXT-->
 <section class="about-text">
 <div class="texts">
     <h3>Nootropics</h3>
@@ -49,30 +44,25 @@
         </p>
 </div>
 </section>
-
-<!-- SECTION: BOXES -->
+<!-- BOXES: IMAGES -->
 <section id="boxes">
-
     <!--BOX 1 -->
     <div class="box">
-    <img class="img-resize-1" src="./img/img-1.jpg" alt="Image of Nootropics">
+    <img class="img-resize-1" src="./img/box_img_1.jpg" alt="Image of Nootropics">
     </div>
-
     <!--BOX 2 -->
     <div class="box">
-    <a href="https://sirak-k.github.io/my-project-2/" target="_blank"><img class="img-resize-2" src="./img/img-app.png" alt="Image of a Rubiks Cube"></a>
+    <a href="https://sirak-k.github.io/my-project-2/" target="_blank"><img class="img-resize-2" src="./img/box_img_2.png" alt="Image of a Rubiks Cube"></a>
     </div>
-
     <!--BOX 3 -->
     <div class="box">
     <img class="img-resize-3" src="./img/box_img_3.jpg" alt="Image of Books">
     </div>
 </section>
 
- <!--FOOTER-->
+ <!-- FOOTER -->
 <footer class="container-fluid">
     <div id="footer-details" class="row">
-
         <div class="col-sm-4">
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
@@ -109,5 +99,6 @@
         </div>
     </div>
 </footer>
+
 </body>
 </html>
