--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,16 +25,11 @@
 </header>
 <!-- HEADER: END-->
 
-<!--SECTION: SHOWCASE-->
-<section class="showcase">
-<!--Video-->
+<!-- LANDING PAGE: VIDEO BACKGROUND -->
     <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
-<!--Video Overlay-->
     <div class="landing-overlay"></div>
-</section>
 
-<!--NEWSLETTER-->
-
+<!-- CONTACT FORM -->
 <div class="sendmail">
     <h2>Send an Email</h2>
         <form id="formEmail">
@@ -48,7 +42,7 @@
     <div class="invalid-input"></div>
 </div>
 
-<!--FOOTER-->
+<!-- FOOTER -->
 <footer class="container-fluid">
     <div id="footer-details" class="row">
 
@@ -88,7 +82,6 @@
         </div>
     </div>
 </footer>
-
 
 </body>
 </html>
