--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>NeuroGen</title>
 </head>
 <body>
+
 <!-- HEADER: START -->
 <header>
     <div class="container">
@@ -21,22 +22,20 @@
 <li><a href="about.html">About</a></li>
 <li><a href="contact.html" >Contact</a></li>
 </ul></nav></div>
-
 </header>
 <!-- HEADER: END-->
 
-<!--SHOWCASE: VIDEO-->
+<!-- LANDING PAGE: VIDEO BACKGROUND -->
     <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
-<!--Video Overlay-->
     <div class="landing-overlay"></div>
 
-<!--TEXT-->
-<div class="texts">
+<!-- LANDING PAGE: TEXT (VALUE PROPOSITION) -->
+<div class="landing-text">
     <h2>Enhance Your Brain.</h2>
     <h2>Enhance Your Life.</h2>
 </div>
 
-<!--NEWSLETTER-->
+<!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail">
@@ -48,7 +47,7 @@
     </form>
 </div>
 
-<!--FOOTER-->
+<!-- FOOTER -->
 <footer class="container-fluid">
     <div id="footer-details" class="row">
 
@@ -89,7 +88,5 @@
     </div>
 </footer>
     
-
-
 </body>
 </html>
