--- a/contact.html
+++ b/contact.html
@@ -11,19 +11,18 @@
 
 <!-- HEADER: START -->
 <header>
-    <div class="container">
+    <div class="header-container">
     <div id="branding">
-    <h1><a href="index.html">NeuroGen™</a></h1>
+    <h1><a href="index.html">NeuroGen</a></h1>
 </div>
 <!-- NAVBAR--> 
-<nav><ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li class="current"><a href="contact.html">Contact</a></li>
-</ul></nav></div>
-
-</header>
-<!-- HEADER: END-->
+<nav class="navbar"><ul>
+    <li class="current"><a href="index.html" >Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html" >Contact</a></li>
+    </ul></nav></div>
+    </header>
+    <!-- HEADER: END-->
 
 <!-- LANDING PAGE: VIDEO BACKGROUND -->
     <video src="img/video-1.mp4" class="landing-video" autoplay loop muted></video>
@@ -43,38 +42,38 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="container-fluid">
+<footer class="footer-container">
     <div id="footer-details" class="row">
 
         <div class="col-sm-4">
             <ul class="list-inline social-links">
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <i class="iconez fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://twitter.com/sirak_dev">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <i class="iconez fab fa-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <i class="iconez fab fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="iconez fab fa-pinterest" aria-hidden="true"></i>
                         <span class="sr-only">Pinterest</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <i class="iconez fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
                 </li>
