--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <!-- HEADER: START -->
 <header>
-    <div class="container">
+    <div class="header-container">
     <div id="branding">
-    <h1><a href="index.html">NeuroGen™</a></h1>
+    <h1><a href="index.html">NeuroGen</a></h1>
 </div>
 <!-- NAVBAR--> 
-<nav><ul>
+<nav class="navbar"><ul>
 <li class="current"><a href="index.html" >Home</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="contact.html" >Contact</a></li>
@@ -46,40 +46,50 @@
         </script>
     </form>
 </div>
+<!-- Media Query Items -->
+<!-- <div>
+    <p class="p1"> iPhone SE & XR </p>
+    <p class="p2"> Samsung Galaxy S20</p>
+    <p class="p3"> Mobile Devices </p>
+    <p class="p4"> iPads & Tablets </p>
+    <p class="p5"> Laptops </p>
+    <p class="p6"> Dell XPS 13 </p>
+    <p class="p7"> Desktop </p>
+    </div> -->
 
 <!-- FOOTER -->
-<footer class="container-fluid">
+<footer class="footer-container">
     <div id="footer-details" class="row">
 
         <div class="col-sm-4">
             <ul class="list-inline social-links">
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.facebook.com/sirak.dev/">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <i class="iconez fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://twitter.com/sirak_dev">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <i class="iconez fab fa-twitter" aria-hidden="true"></i>
                         <span class="sr-only">Twitter</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.linkedin.com/in/sirak-k-a203b1156/">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <i class="iconez fab fa-linkedin" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.pinterest.se/sirakdev/">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="iconez fab fa-pinterest" aria-hidden="true"></i>
                         <span class="sr-only">Pinterest</span>
                     </a>
                 </li>
-                <li class="list-inline-item">
+                <li class="list-item">
                     <a target="_blank" href="https://www.instagram.com/sirak.dev/">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <i class="iconez fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
                 </li>
