--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter">
-    <h3>Subscribe To Our Newsletter</h3>
+    <!-- <h3>Subscribe To Our Newsletter</h3> -->
         <form id="formEmail">
         <input type="email" id="validateEmail" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
