--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <header>
     <div class="header-container">
     <div id="branding">
-    <h1><a href="index.html">NeuroGen</a></h1>
+    <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
 </div>
 <!-- NAVBAR--> 
 <nav class="navbar"><ul>
