--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <div class="header-container">
     <div id="branding">
-    <h1><a href="index.html">NeuroGen</a></h1>
+   <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
 </div>
 <!-- NAVBAR--> 
 <nav class="navbar"><ul>
@@ -37,7 +37,7 @@
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter">
-    <!-- <h3>Subscribe To Our Newsletter</h3> -->
+    <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail">
         <input type="email" id="validateEmail" placeholder="Enter Email...">
         <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
