Add hover color for newsletter form button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail">
         <input type="email" id="validateEmail" placeholder="Enter Email...">
-        <button type="submit" class="button" onclick="audio.play();">Subscribe</button>
+        <button type="submit" class="form-button" onclick="audio.play();">Subscribe</button>
         <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
         </script>
