--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
         <!--SITE LOGO-->
-        <title>NeuroGen</title>
+        <title>Home | NeuroGen</title>
 </head>
 <body>
 
