--- a/index.html
+++ b/index.html
@@ -29,9 +29,36 @@
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
     <div class="landing-overlay"></div>
 
+<!-- LANDING PAGE: IMAGE BACKGROUND -->
+
+    <div class="landing-image-container">
+        <div class="landing-image">
+            <img src="assets/media/img/landing_img_1.png" alt="">
+        </div>
+        <div class="landing-image-overlay"></div>
+    </div>
+
+
+
 <!-- BLOG SECTION - (VALUE PROPOSITION) -->
 
 <section class="blog-container">
+      <article class="blog-post">
+        <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
+        <h2>Top 10 Nootropics in 2023</h2>
+        <h3>Have you heard of Noopept?</h3>
+        <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
+        Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
+        <a href="#">Read More</a>
+      </article>
+      <article class="blog-post">
+        <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
+        <h2>Top 10 Nootropics in 2023</h2>
+        <h3>Have you heard of Noopept?</h3>
+        <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
+        Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
+        <a href="#">Read More</a>
+      </article>
       <article class="blog-post">
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
         <h2>Top 10 Nootropics in 2023</h2>
