--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="branding">
    <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
 </div>
+
+
 <!-- NAVBAR--> 
 <nav class="navbar"><ul>
 <li class="current"><a href="index.html" >Home</a></li>
@@ -30,18 +32,15 @@
     <div class="landing-overlay"></div>
 
 <!-- LANDING PAGE: IMAGE BACKGROUND -->
-
-    <div class="landing-image-container">
-        <div class="landing-image">
-            <img src="assets/media/img/landing_img_1.png" alt="">
-        </div>
-        <div class="landing-image-overlay"></div>
+<div class="landing-image-container">
+    <div class="landing-image">
+        <img src="assets/media/img/landing_img_1.png" alt="">
     </div>
-
+    <div class="landing-image-overlay"></div>
+</div>
 
 
 <!-- BLOG SECTION - (VALUE PROPOSITION) -->
-
 <section class="blog-container">
       <article class="blog-post">
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
@@ -52,19 +51,19 @@
         <a href="#">Read More</a>
       </article>
       <article class="blog-post">
-        <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
-        <h2>Top 10 Nootropics in 2023</h2>
-        <h3>Have you heard of Noopept?</h3>
-        <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
-        Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
+        <img src="./assets/media/img/post_img_2.jpg" alt="Blog Post 2 Image">
+        <h2>Alpha-GPC</h2>
+        <h3>What is Alpha-GPC?</h3>
+        <p>Did you know that Alpha-GPC can be found in the brain? This is a natural choline compound that can be found in the brain and is also available as a dietary supplement.
+            Studies have shown that Alpha-GPC supplementation can improve cognitive function and memory in both young and older adults, and may also have neuroprotective effects.</p>
         <a href="#">Read More</a>
       </article>
       <article class="blog-post">
-        <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
-        <h2>Top 10 Nootropics in 2023</h2>
-        <h3>Have you heard of Noopept?</h3>
-        <p>Noopept is a synthetic nootropic compound that was first introduced as a treatment for cognitive impairments and neurodegenerative diseases such as Alzheimer's and Parkinson's disease.
-        Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
+        <img src="./assets/media/img/post_img_3.jpg" alt="Blog Post 3 Image">
+        <h2>The Racetam Family</h2>
+        <h3>The pros and cons of Racetams</h3>
+        <p>Racetams are a family of nootropic compounds that have been shown to improve cognitive function, memory, and focus.  
+            The mechanism of action of Racetams is not well understood and their long-term effects are not fully known. Racetams are not regulated by the FDA and their quality and purity may vary between different suppliers.</p>
         <a href="#">Read More</a>
       </article>
   </section>
@@ -72,8 +71,6 @@
 
    <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter-container">
-    <h2>Enhance Your Life.</h2>
-    
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
         <form id="formEmail" method="POST"
@@ -85,7 +82,7 @@
         </script>
     </form>
 </div>
-<h2>Enhance Your Brain.</h2>
+
 </div>
 
       
