Before the Code Clean Up and Validation

--- a/about.html
+++ b/about.html
@@ -36,21 +36,34 @@
     </div>
 
 <!-- ABOUT SECTION - (VALUE PROPOSITION) -->
+
+    <!-- POST 1 -->
 <section class="blog-container">
-      <article class="blog-post">
+    <article class="blog-post">
         <h2>Nootropics</h2> 
         <a href="#"><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1"></a> 
-      </article>
-      <article class="blog-post">
-        <h2>Online Quiz App</h2>
+        <p>Learn about Nootropics</p> 
+    </article>
+
+    <!-- POST 2 -->
+      <article class="blog-post-2">
+        <h2>Games</h2>
         <a href="https://sirak-k.github.io/my-project-2/"><img src="./assets/media/img/box_img_2.png" alt="Box Image 2"></a>
-      </article>
-      <article class="blog-post">
+    </article>
+
+    <!-- POST 3 -->
+      <article class="blog-post-3">
         <h2>Books</h2>
         <a href="#"><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3"></a>
-      </article>
-  </section>
+         <p>Explore our library</p>
+    </article>
+</section>
 
+ <!-- LANDING TEXT  -->
+ <div class="landing-text">
+    <h2>Enhance Your Brain.</h2>
+    <h2>Enhance Your Life.</h2>
+</div>
 
 <!-- FOOTER -->
 <footer class="footer-container">
