--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
     <div class="landing-overlay"></div>
 
-    <!-- CONTACT PAGE: LANDING TEXT  -->
+    <!-- LANDING TEXT  -->
     <div class="landing-text">
     <h2>Enhance Your Brain.</h2>
     <h2>Enhance Your Life.</h2>
@@ -38,10 +38,11 @@
    <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="contact-form-container">
 <div class="contact-form">
-    <h3>Send an Email</h3>
+    <h3>Contact Us</h3>
         <form id="formEmail" method="POST"
         action="https://formdump.codeinstitute.net"></form>
         <input type="email" id="validateEmail" name="nameEmail"placeholder="Enter Email...">
+        <input type="email" id="contact-us-text" name="nameEmail"placeholder="Write a Message...">
         <button type="submit" class="form-button" onclick="audio.play();">Send</button>
         <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
