--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Noopept has gained popularity as a cognitive enhancer and is widely used for its purported memory-boosting and mood-enhancing effects.</p>
         <a href="#">Read More</a>
       </article>
-      <article class="blog-post">
+      <article class="blog-post-2">
         <img src="./assets/media/img/post_img_2.jpg" alt="Blog Post 2 Image">
         <h2>Alpha-GPC</h2>
         <h3>What is Alpha-GPC?</h3>
@@ -58,7 +58,7 @@
             Studies have shown that Alpha-GPC supplementation can improve cognitive function and memory in both young and older adults, and may also have neuroprotective effects.</p>
         <a href="#">Read More</a>
       </article>
-      <article class="blog-post">
+      <article class="blog-post-3">
         <img src="./assets/media/img/post_img_3.jpg" alt="Blog Post 3 Image">
         <h2>The Racetam Family</h2>
         <h3>The pros and cons of Racetams</h3>
@@ -68,6 +68,11 @@
       </article>
   </section>
   
+      <!-- LANDING TEXT  -->
+      <div class="landing-text">
+        <h2>Enhance Your Brain.</h2>
+        <h2>Enhance Your Life.</h2>
+    </div>
 
    <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter-container">
