Before Validation: Code Clean-Up done

--- a/about.html
+++ b/about.html
@@ -5,38 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style_about.css">
-    <title> About | NeuroGen</title>
+    <title>About | NeuroGen</title>
 </head>
 <body>
+
 <!-- HEADER: START -->
 <header>
     <div class="header-container">
-    <div id="branding">
-    <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
-</div>
-<!-- NAVBAR--> 
-<nav class="navbar"><ul>
-    <li class="current"><a href="index.html" >Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html" >Contact</a></li>
-    </ul></nav></div>
-    </header>
-    <!-- HEADER: END-->
+        <div id="branding">
+            <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
+        </div>
+        <!-- NAVBAR--> 
+        <nav class="navbar"><ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="current"><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        </ul></nav>
+    </div>
+</header>
+<!-- HEADER: END-->
 
-<!-- LANDING PAGE: VIDEO BACKGROUND -->
+<!-- VIDEO BG -->
 <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
 <div class="landing-overlay"></div>
 
-<!-- LANDING PAGE: IMAGE BACKGROUND -->
-    <div class="landing-image-container">
-        <div class="landing-image">
-            <img src="assets/media/img/landing_img_1.png" alt="">
-        </div>
-        <div class="landing-image-overlay"></div>
+<!-- IMAGE BG -->
+<div class="landing-image-container">
+    <div class="landing-image">
+    <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
+    <div class="landing-image-overlay"></div>
+</div>
 
-<!-- ABOUT SECTION - (VALUE PROPOSITION) -->
+<!-- LANDING TEXT  -->
+<div class="landing-text">
+    <h2>Enhance Your Brain.</h2>
+    <h2>Enhance Your Life.</h2>
+</div>
 
+<!-- ABOUT SECTION -->
     <!-- POST 1 -->
 <section class="blog-container">
     <article class="blog-post">
@@ -59,11 +66,6 @@
     </article>
 </section>
 
- <!-- LANDING TEXT  -->
- <div class="landing-text">
-    <h2>Enhance Your Brain.</h2>
-    <h2>Enhance Your Life.</h2>
-</div>
 
 <!-- FOOTER -->
 <footer class="footer-container">
