--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,25 @@
 <!-- HEADER: START -->
 <header>
     <div class="header-container">
-    <div id="branding">
-    <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
-</div>
-<!-- NAVBAR--> 
-<nav class="navbar"><ul>
-    <li class="current"><a href="index.html" >Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html" >Contact</a></li>
-    </ul></nav></div>
-    </header>
-    <!-- HEADER: END-->
+        <div id="branding">
+            <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
+        </div>
+        <!-- NAVBAR--> 
+        <nav class="navbar"><ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li class="current"><a href="contact.html" >Contact</a></li>
+        </ul></nav>
+    </div>
+</header>
+<!-- HEADER: END-->
 
-<!-- CONTACT PAGE: VIDEO BACKGROUND -->
+<!-- CONTACT PAGE: VIDEO BG -->
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
     <div class="landing-overlay"></div>
 
-    <!-- LANDING TEXT  -->
-    <div class="landing-text">
+<!-- LANDING TEXT  -->
+<div class="landing-text">
     <h2>Enhance Your Brain.</h2>
     <h2>Enhance Your Life.</h2>
 </div>
