--- a/index.html
+++ b/index.html
@@ -13,34 +13,38 @@
 <!-- HEADER: START -->
 <header>
     <div class="header-container">
-    <div id="branding">
-   <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
-</div>
-
-
-<!-- NAVBAR--> 
-<nav class="navbar"><ul>
-<li class="current"><a href="index.html" >Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="contact.html" >Contact</a></li>
-</ul></nav></div>
+        <div id="branding">
+            <h1><a class="logotype" href="index.html">NeuroGen</a></h1>
+        </div>
+        <!-- NAVBAR--> 
+        <nav class="navbar"><ul>
+        <li class="current"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        </ul></nav>
+    </div>
 </header>
 <!-- HEADER: END-->
 
-<!-- LANDING PAGE: VIDEO BACKGROUND -->
+<!-- VIDEO BG -->
     <video src="assets/media/video/video-1.mp4" class="landing-video" autoplay loop muted></video>
     <div class="landing-overlay"></div>
 
-<!-- LANDING PAGE: IMAGE BACKGROUND -->
+<!-- IMAGE BG -->
 <div class="landing-image-container">
     <div class="landing-image">
-        <img src="assets/media/img/landing_img_1.png" alt="">
+    <img src="assets/media/img/landing_img_1.png" alt="Landing Image">
     </div>
     <div class="landing-image-overlay"></div>
 </div>
 
+<!-- LANDING TEXT  -->
+<div class="landing-text">
+    <h2>Enhance Your Brain.</h2>
+    <h2>Enhance Your Life.</h2>
+</div>
 
-<!-- BLOG SECTION - (VALUE PROPOSITION) -->
+<!-- BLOG SECTION -->
 <section class="blog-container">
       <article class="blog-post">
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
@@ -68,17 +72,12 @@
       </article>
   </section>
   
-      <!-- LANDING TEXT  -->
-      <div class="landing-text">
-        <h2>Enhance Your Brain.</h2>
-        <h2>Enhance Your Life.</h2>
-    </div>
 
-   <!-- NEWSLETTER: SUBSCRIPTION FORM -->
+<!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter-container">
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
-        <form id="formEmail" method="POST"
+    <form id="formEmail" method="POST"
         action="https://formdump.codeinstitute.net"></form>
         <input type="email" id="validateEmail" name="nameEmail"placeholder="Enter Email...">
         <button type="submit" class="form-button" onclick="audio.play();">Subscribe</button>
@@ -87,7 +86,6 @@
         </script>
     </form>
 </div>
-
 </div>
 
       
