--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
 <!-- ABOUT SECTION -->
     <!-- POST 1 -->
-<section class="blog-container">
+<div class="blog-container">
     <article class="blog-post">
         <h2>Nootropics</h2> 
         <a href="#"><img src="./assets/media/img/box_img_1.jpg" alt="Box Image 1"></a> 
@@ -64,7 +64,7 @@
         <a href="#"><img src="./assets/media/img/box_img_3.jpg" alt="Box Image 3"></a>
          <p>Explore our library</p>
     </article>
-</section>
+</div>
 
 
 <!-- FOOTER -->
