--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <!-- BLOG SECTION -->
-<section class="blog-container">
+<div class="blog-container">
       <article class="blog-post">
         <img src="./assets/media/img/post_img_1.jpg" alt="Blog Post 1 Image">
         <h2>Top 10 Nootropics in 2023</h2>
@@ -70,16 +70,15 @@
             The mechanism of action of Racetams is not well understood and their long-term effects are not fully known. Racetams are not regulated by the FDA and their quality and purity may vary between different suppliers.</p>
         <a href="#">Read More</a>
       </article>
-  </section>
+  </div>
   
 
 <!-- NEWSLETTER: SUBSCRIPTION FORM -->
 <div class="newsletter-container">
 <div class="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
-    <form id="formEmail" method="POST"
-        action="https://formdump.codeinstitute.net"></form>
-        <input type="email" id="validateEmail" name="nameEmail"placeholder="Enter Email...">
+    <form id="formEmail" method="POST" action="https://formdump.codeinstitute.net">
+        <input type="email" id="validateEmail" name="nameEmail" placeholder="Enter Email...">
         <button type="submit" class="form-button" onclick="audio.play();">Subscribe</button>
         <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
