--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
 <div class="contact-form">
     <h3>Contact Us</h3>
         <form id="formEmail" method="POST"
-        action="https://formdump.codeinstitute.net"></form>
-        <input type="email" id="validateEmail" name="nameEmail"placeholder="Enter Email...">
+        action="https://formdump.codeinstitute.net">
+        <input type="email" id="validateEmail" name="nameEmail" placeholder="Enter Email...">
         <input type="email" id="contact-us-text" name="nameEmail"placeholder="Write a Message...">
         <button type="submit" class="form-button" onclick="audio.play();">Send</button>
         <script>
