Code Clean Up: Remove CSS Line Spacings

--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,14 @@
 </div>
 
 
-   <!-- NEWSLETTER: SUBSCRIPTION FORM -->
+   <!-- CONTACT FORM -->
 <div class="contact-form-container">
 <div class="contact-form">
     <h3>Contact Us</h3>
         <form id="formEmail" method="POST"
         action="https://formdump.codeinstitute.net">
-        <input type="email" id="validateEmail" name="nameEmail" placeholder="Enter Email...">
-        <input type="email" id="contact-us-text" name="nameEmail"placeholder="Write a Message...">
+        <input type="email" id="contact-form-email" name="nameEmail" placeholder="Enter Email...">
+        <input type="email" id="contact-form-text" name="nameEmail"placeholder="Write a Message...">
         <button type="submit" class="form-button" onclick="audio.play();">Send</button>
         <script>
             const audio = new Audio (); audio.src="./audio/Percz (38).mp3"
