--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- NAVBAR--> 
         <nav class="navbar"><ul>
         <li class="current"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="resources.html">Resources</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul></nav>
     </div>
